# fin-data-validator

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  requirements.txt  setup.py
app/: streamlit_app.py
data/: sample_financial_data.csv
docs/: lseg-field-reference.md
lseg_validator/: __init__.py  cli.py  report.py
lseg_validator/checks/: __init__.py  anomaly.py  completeness.py  consistency.py  schema_diff.py
lseg_validator/templates/: report.html.j2
tests/: __init__.py  test_anomaly.py  test_cli_report.py  test_completeness.py  test_schema_diff.py
tests/fixtures/: __init__.py  generate.py  sample_clean.csv  sample_dirty.csv
